connecting copy doc and setting up venue size

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -1,1 +1,22 @@
 /* CUSTOM STORY STYLE */
+.section__hed
+  max-width $column-width
+  margin 0 auto
+  padding 0 1rem
+
+.section__by
+  max-width $column-width
+  margin 0.5rem auto
+  padding 0 1rem
+  font-family $national
+  text-transform: uppercase;
+  color $gray
+  set-type-size('small', true)
+  a
+    color $gray
+    border-bottom 1px solid $gray
+
+.summary
+  max-width $column-width
+  margin 0 auto
+  padding 0 1rem
