--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -26,11 +26,12 @@
 	<main id='content'>
 
 		{{> story/intro }}
+		{{> story/venue }}
 		<!-- PUT ALL YOUR HTML HERE-->
 
 	</main>
 
-	
+
 	<script src='{{basepath}}assets/scripts/d3.v5.8.0.min.js'></script>
 	<script src='bundle.js?version={{timestamp}}' async></script>
 	<script src='https://pudding.cool/assets/scripts/pudding-footer.js' async></script>
