--- a/src/css/utils/variables.styl
+++ b/src/css/utils/variables.styl
@@ -43,7 +43,7 @@ $white = #fff
 
 $bg = #fff
 $fg = $off-black
-$primary= $off-black
+$primary= #34a29e
 
 $column-width = 40rem
 
@@ -62,7 +62,7 @@ $type-size = {
     }
     small: {
         size: 14px,
-        line-height: 1.5    
+        line-height: 1.5
     }
     root: {
         size: 16px,
