--- a/src/html/partials/story/gifs.hbs
+++ b/src/html/partials/story/gifs.hbs
@@ -1,8 +1,9 @@
 <section class='gifs'>
+  <h3 class='section__defined'>{{{doc.definedBy}}}</h3>
   <h2 class='section__hed'>{{{doc.gifsTitle}}}</h2>
-  <h4 class='section__by'>{{{doc.gifsBy}}}</h2>
+  <h4 class='section__by'>By {{{doc.gifsBy}}}</h4>
   {{#each doc.gifsIntro}}
-    <p class='prose'>{{{value}}}
+    <p class='prose'>{{{value}}}</p>
   {{/each}}
 
   <div class='summary summary-gifs'>
@@ -19,8 +20,10 @@
         <li>{{{this}}}</li>
       {{/each}}
     </ul>
-    <figure class='chart chart-gifs'>
-      <!--<img class='gif' src='assets/images/2-Chainz.gif'></src>-->
-    </figure>
+    <figure class='chart chart-gifs'></figure>
+
+    {{#each doc.gifsNotes}}
+      <p class='notes'>{{{value}}}
+    {{/each}}
   </div>
 </section>
