--- a/src/css/utils/presets.styl
+++ b/src/css/utils/presets.styl
@@ -1,3 +1,4 @@
+
 set-type-class(all, true)
 
 // Various hides
@@ -23,6 +24,10 @@ set-type-class(all, true)
 	max-width $column-width
 	margin 1rem auto
 	padding 0 1rem
+	line-height 1.8
+	color #222
+	//font-size 18px
+	-webkit-font-smoothing auto
 
 .media-overlay
 	position absolute
