--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -21,12 +21,14 @@
 
 <body>
 
-	{{> base/header 'sticky'}}
+	{{> base/sticky-header 'sticky'}}
+	{{> base/header}}
 
 	<main id='content'>
 
 		{{> story/intro }}
 		{{> story/venue }}
+		{{> story/youtube }}
 		{{> story/gifs }}
 		<!-- PUT ALL YOUR HTML HERE-->
 
