--- a/src/css/story/gifs.styl
+++ b/src/css/story/gifs.styl
@@ -9,9 +9,10 @@
     list-style-type: circle
 
   figure
-    font-family $national
+    font-family 'Atlas Grotesk Web'
     max-width $column-width
     margin 2rem auto
+    margin-bottom 0px
     .giphyStats
       width 100%
       display flex
@@ -34,12 +35,14 @@
             margin 0 0 0.25rem 0
             padding 0
             line-height 1.2
+            font-size 14px
 
           .gif__count-text
             color $gray-dark
             padding 0
             line-height 1
             margin 0 0 0.25rem 0
+            font-size 14px
 
         .gif__gifContainer
           position relative
@@ -49,6 +52,7 @@
             background-color $primary
             height 1.5rem
             width 1.5rem
+
             set-type-size('x-small')
             text-align center
             color $white
