--- a/src/css/story/intro.styl
+++ b/src/css/story/intro.styl
@@ -1,27 +1,42 @@
 .intro
 	margin 0 auto
-	padding 6rem 1rem 3rem 1rem
+	padding 6rem 1rem 0rem 1rem
 
 	&__hed
-		max-width 60rem
+		max-width 50rem
+		width 100%
 		margin 0 auto
+		line-height 1.2
 		text-align center
-		
+		font-family 'Atlas Grotesk Web'
+		font-size 110px
+		font-weight 300
+		padding-top 5rem
+
 	&__dek
 		max-width $column-width
 		margin 0 auto
 		margin-top 1rem
 		text-align center
-	
+
 	&__byline
 		max-width $column-width
 		margin 0 auto
 		margin-top 1rem
 		text-align center
-	
+		font-family 'Atlas Grotesk Web'
+		font-size 14px
+		font-weight 500
+		a
+			font-weight 500
+
 	&__time
 		display block
 		max-width $column-width
 		margin 0 auto
 		margin-top 1rem
 		text-align center
+		font-family 'Atlas Grotesk Web'
+		font-size 16px
+		font-weight 400
+		margin-bottom 2rem
