--- a/src/css/story/venue.styl
+++ b/src/css/story/venue.styl
@@ -3,15 +3,16 @@
     padding 0 1rem
 
   .calculation__steps
-    list-style-type: circle;
+    list-style-type disc
 
   .must__req
-    list-style-type: circle
+    list-style-type: disc
 
   figure
-    font-family $national
+    font-family 'Atlas Grotesk Web'
     max-width $column-width
     margin 2rem auto
+    margin-top 1rem
     .bar__group
       display flex
       flex-direction column
@@ -20,7 +21,7 @@
     .bar__label
       &-text
         margin 0
-        font-size 16px
+        font-size 14px
         font-weight bold
         color white
       .bar__bar
