--- a/src/html/partials/base/font.hbs
+++ b/src/html/partials/base/font.hbs
@@ -17,8 +17,8 @@
 	********************
 	*/
 
-	/*
-	@font-face {
+
+	/* @font-face {
 		font-family: 'National 2 Narrow Web';
 		src: url('{{basepath}}assets/fonts/national/National2NarrowWeb-Extralight.woff2') format('woff2'),
 		url('{{basepath}}assets/fonts/national/National2NarrowWeb-Extralight.woff') format('woff');
@@ -26,10 +26,10 @@
 		font-style: normal;
 		font-stretch: normal;
 		font-display: swap;
-	}
-	*/
+	} */
 
-	@font-face {
+
+	/* @font-face {
 		font-family: 'National 2 Narrow Web';
 		src: url('{{basepath}}assets/fonts/national/National2NarrowWeb-Regular.woff2') format('woff2'),
 		url('{{basepath}}assets/fonts/national/National2NarrowWeb-Regular.woff') format('woff');
@@ -47,9 +47,9 @@
 		font-style: normal;
 		font-stretch: normal;
 		font-display: swap;
-	}
+	} */
 
-	@font-face {
+	/* @font-face {
 		font-family: 'National 2 Narrow Web';
 		src: url('{{basepath}}assets/fonts/national/National2NarrowWeb-Black.woff2') format('woff2'),
 		url('{{basepath}}assets/fonts/national/National2NarrowWeb-Black.woff') format('woff');
@@ -57,7 +57,7 @@
 		font-style: normal;
 		font-stretch: normal;
 		font-display: swap;
-	}
+	} */
 
 	/*
 	********************
@@ -111,14 +111,14 @@
 		font-display: swap;
 	}
 	*/
-	
+
 	/*
 	********************
 		Atlas Grotesk
 	********************
 	*/
 
-	/*
+	
 	@font-face {
 		font-family: 'Atlas Grotesk Web';
 		src: url('{{basepath}}assets/fonts/atlas/AtlasGrotesk-Regular-Web.woff2') format('woff2'),
@@ -138,7 +138,7 @@
 		font-stretch: normal;
 		font-display: swap;
 	}
-	
+
 	@font-face {
 		font-family: 'Atlas Grotesk Web';
 		src: url('{{basepath}}assets/fonts/atlas/AtlasGrotesk-Bold-Web.woff2') format('woff2'),
@@ -148,5 +148,5 @@
 		font-stretch: normal;
 		font-display: swap;
 	}
-	*/
+
 </style>
