--- a/src/html/partials/base/sticky.hbs
+++ b/src/html/partials/base/sticky.hbs
@@ -13,6 +13,29 @@
 		<a class='' href='https://pudding.cool/about/' target='_blank' onclick='trackOutboundLink("https://pudding.cool/about"); return false;'>About</a>
 	</p>
 </div>
+<a class="logo-link" href="/">
+	<svg id="logo" x="0px" y="0px" style="enable-background:new 0 0 75 110;" xml:space="preserve" viewBox="0 0 75 110">
+		<style type="text/css">
+			.st0{fill:#282828;}
+			.st1{fill:#777777;}
+		</style>
+		<g id="rightP">
+			<path class="st0" d="M67.2,14.1C62.6,4.8,55.3,3.8,48.1,7.6c-5.8,3.1-22.3,13.1-22.3,13.1v11.8c0,0,18.8-10.9,22.3-12.7
+				c4.3-2.3,8.7-1.6,11.5,3.9c2.8,5.6,2.7,15-1.8,22.5c-3.5,5.9-6.8,8.6-9.9,10.3S25.8,69.4,25.8,69.4v11.8c0,0,16.8-9.6,22-12.4
+				c5.1-2.8,10.5-7.3,16.4-17.1C71.7,39.1,71.8,23.4,67.2,14.1z"></path>
+			<path class="st0" d="M50.8,40.9c1.5-2.5,1.5-5.6,0.6-7.4c-0.9-1.8-2.4-2-3.8-1.3c-1.1,0.6-21.9,12.4-21.9,12.4v11.8
+				c0,0,20.8-11.6,21.8-12.2C48.6,43.7,49.7,42.8,50.8,40.9z"></path>
+			<path class="st0" d="M25.8,105.5l11-6.3V87.4l-11,6.3V105.5z"></path>
+		</g>
+		<g id="leftP">
+			<path class="st1" d="M25.8,32.5l-11-6.4V14.3l11,6.4V32.5z"></path>
+			<path class="st1" d="M25.8,56.4l-22-12.6V32l22,12.6V56.4z"></path>
+			<path class="st1" d="M25.8,81.1l-5.6-3.2V66.1l5.6,3.2V81.1z"></path>
+			<path class="st1" d="M25.8,105.5L9.5,96.1V84.3l16.3,9.4V105.5z"></path>
+		</g>
+	</svg>
+	<p>Back to Homepage</p>
+</a>
 <button class='header__toggle'>
 	<span>@@include('menu.svg')</span>
 	<span>@@include('x.svg')</span>
