--- a/src/html/partials/story/intro.hbs
+++ b/src/html/partials/story/intro.hbs
@@ -1,11 +1,10 @@
 <div class='intro'>
 	<h1 class='intro__hed'>{{doc.title}}</h1>
 	<p class='intro__dek'>{{doc.description}}</p>
-	<p class='intro__byline'>By
-		<a href='{{meta.author.url}}' target='_blank'>
-			<strong>{{meta.author.name}}</strong>
+	<!-- <p class='intro__byline'>By
+		<a href='{{meta.author.url}}' target='_blank'>{{meta.author.name}}
 		</a>
-	</p>
+	</p> -->
 	<time class='intro__time'>February 2019</time>
 
 	{{#each doc.intro}}
