added DataFace contribution

--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -30,6 +30,7 @@
 		{{> story/venue }}
 		{{> story/youtube }}
 		{{> story/gifs }}
+		{{> story/reddit }}
 		<!-- PUT ALL YOUR HTML HERE-->
 
 	</main>
