--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -14,12 +14,12 @@
 
 
 .definition-wrapper
-  display flex
-  justify-content flex-start
   padding 0 1rem
   max-width 40rem
   margin 0 auto
   margin-top 2rem
+	h2,h3
+		display inline-block
 
 body
   background #f9f9f9
