--- a/src/css/story/youtube.styl
+++ b/src/css/story/youtube.styl
@@ -3,7 +3,6 @@
 
 .chart-youtube-flex
   display flex
-  //margin-top 3rem
   margin-bottom 3rem
 
 .chart-youtube-wrapper
@@ -34,7 +33,7 @@
             margin-left 40px
             .chart-youtube-geo-platform
               //padding-left 30px
-              color #11757b
+              color $primary
             .artist-name
               padding-left 0px
           .chart-youtube-geo-platform
@@ -46,7 +45,7 @@
             padding-bottom 2px
             text-transform uppercase
             letter-spacing 1px
-            color #b50909
+            color $secondary
           .chart-youtube-geo-ranking-wrapper
             .chart-youtube-geo-ranking-row
               display flex
