--- a/src/html/partials/story/reddit.hbs
+++ b/src/html/partials/story/reddit.hbs
@@ -7,7 +7,7 @@
     <h4 class='section__by'>{{{doc.redditBy}}}</h2>
 
     {{#each doc.redditIntro}}
-        <p class='prose'>{{{value}}}
+        <p class='prose'>{{{value}}}</p>
     {{/each}}
 
     <div class='summary summary-reddit'>
