--- a/src/html/partials/story/venue.hbs
+++ b/src/html/partials/story/venue.hbs
@@ -6,7 +6,7 @@
   <h4 class='section__by'>{{{doc.venueBy}}}</h2>
 
   {{#each doc.venueIntro}}
-    <p class='prose'>{{{value}}}
+    <p class='prose'>{{{value}}}</p>
   {{/each}}
 
 
