--- a/src/css/story/intro.styl
+++ b/src/css/story/intro.styl
@@ -1,17 +1,20 @@
 .intro
 	margin 0 auto
-	padding 6rem 1rem 0rem 1rem
+	padding-top 6rem
 
 	&__hed
 		max-width 50rem
 		width 100%
 		margin 0 auto
-		line-height 1.2
 		text-align center
 		font-family 'Atlas Grotesk Web'
-		font-size 110px
 		font-weight 300
-		padding-top 5rem
+		line-height 1.2
+		font-size 64px
+		+mq('bp-4')
+			line-height 1.2
+			font-size 110px
+			padding-top 5rem
 
 	&__dek
 		max-width $column-width
