--- a/src/css/utils/variables.styl
+++ b/src/css/utils/variables.styl
@@ -1,3 +1,8 @@
+
+$c-facebook = #eabc3b
+$c-twitter = #7564bc
+$c-youtube = #34a29e
+$c-instagram = #d65454
 // -------------------
 // Breakpoints
 // -------------------
@@ -18,7 +23,7 @@ $atlas = 'Atlas Grotesk Web'
 $publico = 'Publico Text Web'
 
 $sans-fb = Helvetica, Arial, sans-serif
-$sans = $national, $sans-fb
+$sans = $atlas, $sans-fb
 $serif-fb = Georgia, Times, serif
 $serif = $tiempos, $serif-fb
 $serif-hed-fb = 'Times New Roman', serif
@@ -44,6 +49,7 @@ $white = #fff
 $bg = #fff
 $fg = $off-black
 $primary= #34a29e
+$secondary = #d65454
 
 $column-width = 40rem
 
