--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -31,6 +31,7 @@
 		{{> story/youtube }}
 		{{> story/gifs }}
 		{{> story/reddit }}
+		{{> story/social }}
 		<!-- PUT ALL YOUR HTML HERE-->
 
 	</main>
