--- a/src/css/utils/variables.styl
+++ b/src/css/utils/variables.styl
@@ -1,8 +1,8 @@
 
-$c-facebook = #eabc3b
-$c-twitter = #7564bc
-$c-youtube = #34a29e
-$c-instagram = #d65454
+$c-facebook = #4a4e80
+$c-twitter = #ffffff
+$c-youtube = #FFEB3B
+$c-instagram = #98c2ce
 // -------------------
 // Breakpoints
 // -------------------
