--- a/src/html/partials/story/gifs.hbs
+++ b/src/html/partials/story/gifs.hbs
@@ -1,6 +1,6 @@
 <section class='gifs'>
   <div class="definition-wrapper">
-    <h3 class='section__defined'>{{{doc.definedBy}}}</h3>
+    <!-- <h3 class='section__defined'>{{{doc.definedBy}}}</h3> -->
     <h2 class='section__hed'>{{{doc.gifsTitle}}}</h2>
   </div>
   <h4 class='section__by'>{{{doc.gifsBy}}}</h2>
