--- a/src/html/partials/story/social.hbs
+++ b/src/html/partials/story/social.hbs
@@ -1,7 +1,7 @@
 <section class='social'>
 
     <div class="definition-wrapper">
-        <h3 class='section__defined'>{{{doc.definedBy}}}</h3>
+        <!-- <h3 class='section__defined'>{{{doc.definedBy}}}</h3> -->
         <h2 class='section__hed'>{{{doc.socialTitle}}}</h2>
     </div>
     <h4 class='section__by'>{{{doc.socialBy}}}</h2>
