--- a/src/html/partials/story/youtube.hbs
+++ b/src/html/partials/story/youtube.hbs
@@ -18,6 +18,7 @@
       </div>
     </figure>
   </div>
+  <p class="notes">*Spotify released a ranking of artists by streams. For some artists, their stream counts were released too.</p>
   {{#each doc.chartPost}}
     <p class='prose'>{{{value}}}</p>
   {{/each}}
