--- a/src/css/story/gifs.styl
+++ b/src/css/story/gifs.styl
@@ -34,11 +34,11 @@
             font-weight 700
             margin 0 0 0.25rem 0
             padding 0
-            line-height 1.2
+            line-height 1.3
             font-size 14px
 
           .gif__count-text
-            color $gray-dark
+            color rgba(40, 40, 40, 0.76)
             padding 0
             line-height 1
             margin 0 0 0.25rem 0
@@ -49,16 +49,16 @@
 
           .gif__rank-text
             position absolute
-            background-color $primary
-            height 1.5rem
-            width 1.5rem
+            background-color #49527c
+            //height 1.5rem
+            //width 1.5rem
 
-            set-type-size('x-small')
+            font-size 16px
             text-align center
             color $white
             font-weight 700
             margin 0 0 0.25rem 0
-            padding 0.35rem 0.25rem 0.25rem 0.25rem
+            padding .5rem
             line-height 1
 
           .gif__gif
