--- a/src/css/story/reddit.styl
+++ b/src/css/story/reddit.styl
@@ -30,6 +30,15 @@ section.reddit
 	height auto
 	margin .5rem 0rem 1rem
 	position relative
+	.reddit-artist-container
+		&:first-of-type
+			.reddit-artist-inner
+				background #98c2ce
+				border 3px solid black
+			.reddit-artist-name
+				color black
+			.reddit-artist-count
+				color black
 
 .reddit-artist-container
 	display inline-block
@@ -42,6 +51,9 @@ section.reddit
 .reddit-artist-inner
 	display inline-block
 	color white
+	border 3px solid black
+	background white
+
 	margin-right 5px
 	margin-bottom 5px
 	font-weight bold
@@ -50,16 +62,17 @@ section.reddit
 
 .reddit-artist-name
 	display inline-block
-	color white
 	margin-right 5px
 	margin-bottom 5px
 	font-weight bold
 	text-transform uppercase
 	line-height 1
+	color black
 
 .reddit-artist-count
-	font-weight 200
+	font-weight 500
 	max-width 80px
+	color black
 	display inline-block
 	line-height 1
 	padding-left 5px
