--- a/src/css/story/social.styl
+++ b/src/css/story/social.styl
@@ -8,7 +8,7 @@ section.social
 		display flex
 		justify-content center
 		margin-bottom 1rem
-		p 
+		p
 			margin 0
 			font-family $sans
 			set-type-size(small)
@@ -16,27 +16,32 @@ section.social
 			padding 0 0.5em
 			&.instagram
 				background-color $c-instagram
-				color $white
+				color black
 			&.twitter
 				background-color $c-twitter
-				color $white
+				color black
 			&.facebook
 				background-color $c-facebook
+				color white
 			&.youtube
 				background-color $c-youtube
-				color $white
+				color black
 
 	circle
 		stroke $fg
-	text 
+		stroke-width 2px
+	text
 		font-family $sans
-		font-weight 400
+		font-weight 500
 		set-type-size(small)
 		text-transform capitalize
+		font-size 14px
 		&.total
-			fill $gray-dark
+			fill black
 	line
-		stroke $gray
+		stroke black
+		shape-rendering crispEdges
+		stroke-opacity .3
 
 	.platform
 		&--instagram
@@ -53,15 +58,17 @@ section.social
 			display none
 		path
 			display none
-		text 
+		text
 			set-type-size(xx-small)
-			fill $gray-dark
+			fill black
+			font-weight 500
 		line
-			stroke $gray-light
-			stroke-dasharray 4px 4px
-			stroke-opacity 0.5
+			stroke black
+			stroke-dasharray 3px 8px
+			stroke-opacity 0.4
+
 
 	.label
 		text-transform uppercase
 		set-type-size(xx-small)
-		fill $gray-dark
+		fill black
