--- a/src/html/partials/base/font.hbs
+++ b/src/html/partials/base/font.hbs
@@ -26,10 +26,10 @@
 		font-style: normal;
 		font-stretch: normal;
 		font-display: swap;
-	} */
+	}
 
 
-	/* @font-face {
+	@font-face {
 		font-family: 'National 2 Narrow Web';
 		src: url('{{basepath}}assets/fonts/national/National2NarrowWeb-Regular.woff2') format('woff2'),
 		url('{{basepath}}assets/fonts/national/National2NarrowWeb-Regular.woff') format('woff');
@@ -118,7 +118,7 @@
 	********************
 	*/
 
-	
+
 	@font-face {
 		font-family: 'Atlas Grotesk Web';
 		src: url('{{basepath}}assets/fonts/atlas/AtlasGrotesk-Regular-Web.woff2') format('woff2'),
