--- a/src/html/partials/story/reddit.hbs
+++ b/src/html/partials/story/reddit.hbs
@@ -1,7 +1,7 @@
 <section class='reddit'>
 
     <div class="definition-wrapper">
-        <h3 class='section__defined'>{{{doc.definedBy}}}</h3>
+        <!-- <h3 class='section__defined'>{{{doc.definedBy}}}</h3> -->
         <h2 class='section__hed'>{{{doc.redditTitle}}}</h2>
     </div>
     <h4 class='section__by'>{{{doc.redditBy}}}</h2>
