--- a/src/html/partials/story/venue.hbs
+++ b/src/html/partials/story/venue.hbs
@@ -1,6 +1,6 @@
 <section class='venue'>
   <div class="definition-wrapper">
-    <h3 class='section__defined'>{{{doc.definedBy}}}</h3>
+    <!-- <h3 class='section__defined'>{{{doc.definedBy}}}</h3> -->
     <h2 class='section__hed'>{{{doc.venueTitle}}}</h2>
   </div>
   <h4 class='section__by'>{{{doc.venueBy}}}</h2>
