--- a/src/css/story/reddit.styl
+++ b/src/css/story/reddit.styl
@@ -9,14 +9,6 @@ section.reddit
 	li
 		list-style-type circle
 
-#reddit-chart-title
-	font-family 'Atlas Grotesk Web'
-	font-size 24px
-	font-weight bold
-	max-width 40rem
-	margin 2rem auto 0 auto
-
-
 #reddit-chart-subtitle
 	font-size 17px
 	font-weight 300
@@ -30,6 +22,7 @@ section.reddit
 	height auto
 	margin .5rem 0rem 1rem
 	position relative
+	margin-top 1rem
 	.reddit-artist-container
 		&:first-of-type
 			.reddit-artist-inner
@@ -57,7 +50,6 @@ section.reddit
 	margin-right 5px
 	margin-bottom 5px
 	font-weight bold
-	border-radius 2px
 	line-height .8
 
 .reddit-artist-name
