--- a/src/css/story/social.styl
+++ b/src/css/story/social.styl
@@ -8,12 +8,14 @@ section.social
 		display flex
 		justify-content center
 		margin-bottom 1rem
+		margin-top 1rem
 		p
 			margin 0
 			font-family $sans
 			set-type-size(small)
 			margin 0 0.25em
-			padding 0 0.5em
+			padding 5px 10px
+			border 3px solid black
 			&.instagram
 				background-color $c-instagram
 				color black
