--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -1,4 +1,5 @@
 body .pudding-footer, footer
+  padding-top 3rem
   background #fbd3d1
   .footer-company
     background #fbd3d1
@@ -41,6 +42,9 @@ p
   border-bottom 3px solid black
   font-weight 600
   color #111
+  span
+    font-weight 500
+    font-size 14px
 
 
 .definition-wrapper
