--- a/src/html/partials/story/gifs.hbs
+++ b/src/html/partials/story/gifs.hbs
@@ -23,6 +23,7 @@
         <li>{{{this}}}</li>
       {{/each}}
     </ul>
+    <p class="chart-title">Artists, ranked by GIF count on Giphy</p>
     <figure class='chart chart-gifs'></figure>
 
     {{#each doc.gifsNotes}}
