--- a/src/html/partials/story/reddit.hbs
+++ b/src/html/partials/story/reddit.hbs
@@ -25,8 +25,7 @@
         {{/each}}
         </ul>
 
-        <p id="reddit-chart-title">Top Artists on Reddit</p>
-        <p id="reddit-chart-subtitle">Sized by number of comments</p>
+        <p class="chart-title">Top Artists on Reddit, <span>Sized by number of comments</span></p>
         <figure id="reddit-text-cloud"></figure>
 
         {{#each doc.redditNotes}}
