--- a/src/html/partials/story/social.hbs
+++ b/src/html/partials/story/social.hbs
@@ -9,8 +9,8 @@
     {{#each doc.socialIntro}}
 			<p class='prose'>{{{value}}}</p>
     {{/each}}
-
    	<figure>
+        <p class="chart-title">Artists, ranked by followers on social channels</div>
 			 	<div class='key'>
 					<p class='youtube'>YouTube</p>
 					<p class='facebook'>Facebook</p>
