--- a/src/css/story/intro.styl
+++ b/src/css/story/intro.styl
@@ -41,7 +41,8 @@
 		flex-direction column
 		justify-content flex-end
 	&__hed
-		max-width 50rem
+		max-width 60rem
+		position relative
 		width 100%
 		margin 0 auto
 		text-align center
