--- a/src/css/story/social.styl
+++ b/src/css/story/social.styl
@@ -4,11 +4,15 @@ section.social
 		max-width 40rem
 		margin 0 auto
 		margin-top 2rem
+		.chart-title
+			width 95%;
+			margin 0 auto
 	.key
 		display flex
 		justify-content center
 		margin-bottom 1rem
 		margin-top 1rem
+		flex-wrap wrap
 		p
 			margin 0
 			font-family $sans
@@ -16,6 +20,7 @@ section.social
 			margin 0 0.25em
 			padding 5px 10px
 			border 3px solid black
+			margin-bottom 1rem
 			&.instagram
 				background-color $c-instagram
 				color black
