--- a/src/html/partials/base/meta.hbs
+++ b/src/html/partials/base/meta.hbs
@@ -14,9 +14,9 @@
 <meta property='og:locale' content='en_US' />
 
 <meta property='og:image' content='{{meta.imgFacebook}}' />
-<meta property='og:image:type' content='image/jpeg' />
+<meta property='og:image:type' content='image/png' />
 <meta property='og:image:width' content='1200' />
-<meta property='og:image:height' content='600' />
+<meta property='og:image:height' content='630' />
 
 <meta name='twitter:card' content='summary_large_image' />
 <meta name='twitter:site' content='https://pudding.cool' />
@@ -38,9 +38,9 @@
 {{!--
 <link rel='preload' type='font/woff2' as='font' crossorigin href='{{basepath}}assets/fonts/national/National2NarrowWeb-Extralight.woff2'>
 --}}
-<link rel='preload' type='font/woff2' as='font' crossorigin href='{{basepath}}assets/fonts/national/National2NarrowWeb-Regular.woff2'>
+<!-- <link rel='preload' type='font/woff2' as='font' crossorigin href='{{basepath}}assets/fonts/national/National2NarrowWeb-Regular.woff2'>
 <link rel='preload' type='font/woff2' as='font' crossorigin href='{{basepath}}assets/fonts/national/National2NarrowWeb-Bold.woff2'>
-<link rel='preload' type='font/woff2' as='font' crossorigin href='{{basepath}}assets/fonts/national/National2NarrowWeb-Black.woff2'>
+<link rel='preload' type='font/woff2' as='font' crossorigin href='{{basepath}}assets/fonts/national/National2NarrowWeb-Black.woff2'> -->
 <link rel='preload' type='font/woff2' as='font' crossorigin href='{{basepath}}assets/fonts/tiempos/TiemposTextWeb-Regular.woff2'>
 <link rel='preload' type='font/woff2' as='font' crossorigin href='{{basepath}}assets/fonts/tiempos/TiemposTextWeb-Bold.woff2'>
 {{!--
@@ -49,12 +49,7 @@
 {{!--
 <link rel='preload' type='font/woff2' as='font' crossorigin href='{{basepath}}assets/fonts/publico/PublicoText-Bold-Web.woff2'>
 --}}
-{{!--
+
 <link rel='preload' type='font/woff2' as='font' crossorigin href='{{basepath}}assets/fonts/atlas/AtlasGrotesk-Regular-Web.woff2'>
---}}
-{{!--
 <link rel='preload' type='font/woff2' as='font' crossorigin href='{{basepath}}assets/fonts/atlas/AtlasGrotesk-Medium-Web.woff2'>
---}}
-{{!--
 <link rel='preload' type='font/woff2' as='font' crossorigin href='{{basepath}}assets/fonts/atlas/AtlasGrotesk-Bold-Web.woff2'>
---}}
