--- a/src/css/story/header.styl
+++ b/src/css/story/header.styl
@@ -61,7 +61,11 @@ header.is-sticky
 	height 3rem
 	display flex
 	width 100%
+
 	align-items center
+	@media (max-width: 600px)
+		z-index 0
+		background #f9d3d1
 	.logo-link
 		width 25px
 		text-decoration none
