--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -36,7 +36,7 @@
 		{{> story/reddit }}
 		{{> story/social }}
 		<!-- PUT ALL YOUR HTML HERE-->
-
+		<p class="notes" style="max-width:40rem; width:95%; text-align:center; margin-top:50px;">Illustration by <a href="https://www.instagram.com/danxdraws/">Dan Evans</a></p>
 	</main>
 
 
